# Isaac_RL_navigation

./: CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/rl_navigation/share/rl_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rl_navigation/share/rl_navigation/cmake/: rl_navigationConfig-version.cmake  rl_navigationConfig.cmake
install/rl_navigation/share/rl_navigation/environment/: ament_prefix_path.dsv  path.dsv
install/rl_navigation/share/rl_navigation/scripts/: TD_CBAM.py  TD_CBAM2.py  TD_CBAM_follow.py  TD_modify.py  lidar_preprocessing.py  model.py  path_visualize.py  potential.py  replay_memory.py  reward.py  train.py  utils.py
log/: latest_build
runs/0512_01-18/: events.out.tfevents.1746980332.kang-MS-7C95.2878402.0
runs/0521_04-32/: events.out.tfevents.1747769556.kang-MS-7C95.3820712.0
runs/0521_04-42/: events.out.tfevents.1747770170.kang-MS-7C95.3825631.0
runs/0521_05-35/: events.out.tfevents.1747773314.kang-MS-7C95.3851578.0
runs/0521_05-45/: events.out.tfevents.1747773920.kang-MS-7C95.3856624.0
runs/0521_06-00/: events.out.tfevents.1747774804.kang-MS-7C95.3863717.0
runs/0521_13-56/: events.out.tfevents.1747803417.kang-MS-7C95.4075647.0
scripts/: TD_CBAM.py  TD_CBAM2.py  TD_CBAM_follow.py  TD_CBAM_test.py  TD_modify.py  lidar_preprocessing.py  model.py  path_visualize.py  potential.py  replay_memory.py  replay_memory_test.py  reward.py  reward_test.py  train.py  train_test.py
(+3 files in other folders)
